# ganchain-v2

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  daily.sh  file_header.txt
frontier/: Cargo.toml
frontier/.maintain/: release-polkadot-branch.sh
node/: Cargo.toml
node/res/: Raw.json  gpu.json
node/src/: benchmarking.rs  chain_spec.rs  command.rs  eth.rs  lib.rs  metrics.rs  service.rs
pallets/custom-signatures/: Cargo.toml
pallets/precompiles/assets-erc20/: Cargo.toml
pallets/precompiles/batch/: Cargo.toml
pallets/precompiles/sr25519/: Cargo.toml
pallets/precompiles/substrate-ecdsa/: Cargo.toml
pallets/precompiles/utils/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/common/: Cargo.toml
runtime/common/src/: elections.rs  impls.rs  lib.rs
runtime/gpu/: Cargo.toml  build.rs
runtime/gpu/constants/: Cargo.toml
runtime/gpu/constants/src/: lib.rs
runtime/gpu/constants/src/weights/: block_weights.rs  extrinsic_weights.rs  mod.rs  paritydb_weights.rs  rocksdb_weights.rs
runtime/gpu/src/: bag_thresholds.rs  lib.rs  proxy_config.rs
runtime/gpu/src/evm/: mod.rs  (+1 more)
scripts/: build_with_docker.sh  get_selendra.sh  prepare-testnet.sh  run_benches_for_runtime.sh  srtool_with_docker.sh
scripts/packaging/: selendra.service
scripts/sessions/: audi1  audi2  audi3  audi4  babe1  babe2  babe3  babe4  gran1  gran2  gran3  gran4  imol1  imol2  imol3  imol4  run.sh  run1.sh  run2.sh
utils/generate-bags/: Cargo.toml
utils/generate-bags/src/: main.rs
utils/staking-miner/: Cargo.toml
(+42 files in other folders)
