[package]
name = "gpu-runtime-constants"
version = "1.0.1"
authors = ["gpu <info@gpu.org>"]
edition = "2021"

[dependencies]
smallvec = "1.8.0"

frame-support = { git = "https://github.com/brahmGAN/substrate", branch = "polkadot-v1.0.0", default-features = false }
primitives = { package = "gpu-primitives", path = "../../../primitives", default-features = false }
runtime-common = { package = "gpu-runtime-common", path = "../../common", default-features = false }
sp-runtime = { git = "https://github.com/brahmGAN/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-weights = { git = "https://github.com/brahmGAN/substrate", branch = "polkadot-v1.0.0", default-features = false }
sp-core = { git = "https://github.com/brahmGAN/substrate", branch = "polkadot-v1.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-runtime/std",
	"sp-weights/std"
]
